--- a/bmi.css
+++ b/bmi.css
@@ -61,14 +61,20 @@ h1
 }
 
 /*reponsiveness*/
-@media only screen and (min-width:400px)
+@media only screen and (min-width:375px)
 {
     #content1{
-        left: 20px;
+        left: 10px;
         width: 350px;
     }
     #content2{
         left: 71px;
+    }
+}
+@media only screen and (min-width:400px)
+{
+    #content1{
+        left: 20px;
     }
 } 
 @media only screen and (min-width:600px){
