--- a/bmi.css
+++ b/bmi.css
@@ -1,32 +1,14 @@
 body
 {
-    margin: 0 0;
+    margin: 0;
     color: white;
-    background-color: blue;
-}
-.animate1, .animate2
-{
-    width: 100px;
-    height: 100px;
-    background-color: blue ;
-    animation-name: change-color, change-size ;
-    animation-duration: 6s, 6s;
-    animation-delay: 2s, 2s;
-    animation-iteration-count: infinite, infinite;
+    background-image: linear-gradient(180deg, rgb(111, 188, 194) 0%, rgb(169, 195, 197) 80%, 	rgb(189, 138, 72) 80% , rgb(247, 207, 156)100%);
 }
 #lbs
 {
     display: none;
 }
-@keyframes change-color {
-    25% { background-color: #15ff00; }
-    50% { background-color: #fff459; }
-    75% { background-color: #bd0000; }
-}
-@keyframes change-size{
-    50% { height: 450px;}
-}
-#container
+.container
 {
     width: 100vw;
     height: 100vh;
@@ -34,19 +16,20 @@ body
     justify-content: center;
     align-items: center;
     gap: 100px;
+    background-image: radial-gradient(circle at top left,#fbff00 0% 8%, transparent 15% 100%);
 }
-#content1
+.content1
 {
     width: 400px;
     height: 500px;
-    background-color: blue;
+    background-color: rgba(207, 207, 207, 0.37);
     border-radius: 15px;
     display: flex; 
     flex-direction: column;
     justify-content: center; 
     align-items: center;
     gap: 15px;
-    box-shadow: rgb(0, 0, 189) -5px -5px 10px 4px, rgb(0, 37, 201) 5px 5px 10px 4px;
+    box-shadow: 0px 0px 10px rgba(78, 78, 78, 0.3);
 }
 input , button
 {
@@ -78,31 +61,18 @@ input:focus , button:hover
 {
     width: 250px;
     transition: 500ms;
-    box-shadow: rgb(5, 0, 77) 0px 0px 25px 4px;
+    box-shadow: 0px 0px 10px rgba(78, 78, 78, 0.8);
 }
 @media only screen and (max-width: 450px)
 {
-    #content1
+    .content1
     {
         width: 300px;
     }
 }
-@media only screen and (max-width: 850px)
-{
-    #container
-    {
-        flex-direction: column;
-    }
-    .animate1, .animate2
-    {
-        width: 0px;
-        height: 0px;
-        animation-name: none ;
-    }
-}
 @media only screen and (min-width: 1532px)
 {
-    #content1 
+    .content1 
     {
         font-size: 24px;
         width: 650px;
