--- a/bmi.css
+++ b/bmi.css
@@ -13,10 +13,9 @@ body
     width: 100vw;
     height: 100vh;
     display: flex; 
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 100px;
-    background-image: radial-gradient(circle at top left,#fbff00 0% 8%, transparent 15% 100%);
+    background-image: radial-gradient(circle at top left,#eeff00 0% 8%, transparent 15% 100%);
 }
 .content1
 {
