--- a/bmi.css
+++ b/bmi.css
@@ -2,6 +2,8 @@ body
 {
     margin: 0;
     color: white;
+    font-family: 'Cousine', monospace;
+    font-family: 'Tilt Neon', cursive;
     background-image: linear-gradient(180deg, rgb(111, 188, 194) 0%, rgb(169, 195, 197) 80%, 	rgb(189, 138, 72) 80% , rgb(247, 207, 156)100%);
 }
 #lbs
@@ -36,16 +38,9 @@ input , button
     height: 50px;
     border-radius: 10px;
     border: 2px solid white;
+    font-family: 'Cousine', monospace;
+    font-family: 'Tilt Neon', cursive;
     transition: 300ms;
-}
-p
-{
-    position: relative;
-    top: -15px;
-}
-#switch
-{
-    left: -25px;
 }
 #content2
 {
